# cartaxi_tgbot

./: .gitignore  CMakeLists.txt  Makefile  README.md
python/: car.py  mydb.sql
python/bot_env/: pyvenv.cfg
src/: car.cpp
